// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FavoritesList /> test  should render FavoritesList correctly 1`] = `
<ul
  className="favorites__list"
>
  <li
    className="favorites__locations-items"
  >
    <div
      className="favorites__locations locations locations--current"
    >
      <div
        className="locations__item"
      >
        <LocationsItem
          cityName="Paris"
          onClick={[Function]}
        />
      </div>
    </div>
    <FavoritesCardsList
      city="Paris"
      offers={
        Array [
          Object {
            "bedrooms": 1,
            "city": Object {
              "location": Object {
                "latitude": 52.370216,
                "longitude": 4.895168,
                "zoom": 10,
              },
              "name": "Paris",
            },
            "description": "Gran suite con entrada independiente y baño interior privado en el centro de Segovia. Privacidad y comodidad a tan sólo tres minutos del acueducto.Amplia y luminosa, con 2 camas de 105 (+ 1 opcional de 90), baño completo, calefacción, mininevera, microondas, vajilla, cubertería básica, Internet y un balcón grande y soleado.I speak English, Italian and Spanish",
            "goods": Array [
              "cabel TV",
              "heating",
              "kitchen",
              "towels",
              "washing machine",
              "washer",
              "dishwasher",
              "conditioner",
              "elevator",
              "coffee machine",
            ],
            "host": Object {
              "avatar": "https://robohash.org/28?set=set2&size=74x74",
              "id": 4,
              "isPro": false,
              "name": "Salom",
            },
            "id": 1,
            "images": Array [
              "https://bit.ly/34LWdhj",
              "https://bit.ly/36Ys6Wn",
              "https://bit.ly/33Qpecj",
              "https://bit.ly/30YVQif",
              "https://bit.ly/36TgIv7",
              "https://bit.ly/3lEt2DG",
            ],
            "isFavorite": true,
            "isPremium": false,
            "location": Object {
              "latitude": 48.865610000000004,
              "longitude": 2.350499,
              "zoom": 5,
            },
            "maxGuests": 8,
            "previewImage": "https://bit.ly/34LWdhj",
            "price": 207,
            "rating": 1.4018800815887484,
            "title": "La Latina- Small Charming Studio",
            "type": "room",
          },
        ]
      }
    />
  </li>
</ul>
`;

exports[`<FavoritesList /> test should render FavoritesList correctly with multiple favorites 1`] = `
<ul
  className="favorites__list"
>
  <li
    className="favorites__locations-items"
  >
    <div
      className="favorites__locations locations locations--current"
    >
      <div
        className="locations__item"
      >
        <LocationsItem
          cityName="Paris"
          onClick={[Function]}
        />
      </div>
    </div>
    <FavoritesCardsList
      city="Paris"
      offers={
        Array [
          Object {
            "bedrooms": 1,
            "city": Object {
              "location": Object {
                "latitude": 52.370216,
                "longitude": 4.895168,
                "zoom": 10,
              },
              "name": "Paris",
            },
            "description": "Gran suite con entrada independiente y baño interior privado en el centro de Segovia. Privacidad y comodidad a tan sólo tres minutos del acueducto.Amplia y luminosa, con 2 camas de 105 (+ 1 opcional de 90), baño completo, calefacción, mininevera, microondas, vajilla, cubertería básica, Internet y un balcón grande y soleado.I speak English, Italian and Spanish",
            "goods": Array [
              "cabel TV",
              "heating",
              "kitchen",
              "towels",
              "washing machine",
              "washer",
              "dishwasher",
              "conditioner",
              "elevator",
              "coffee machine",
            ],
            "host": Object {
              "avatar": "https://robohash.org/28?set=set2&size=74x74",
              "id": 4,
              "isPro": false,
              "name": "Salom",
            },
            "id": 1,
            "images": Array [
              "https://bit.ly/34LWdhj",
              "https://bit.ly/36Ys6Wn",
              "https://bit.ly/33Qpecj",
              "https://bit.ly/30YVQif",
              "https://bit.ly/36TgIv7",
              "https://bit.ly/3lEt2DG",
            ],
            "isFavorite": true,
            "isPremium": false,
            "location": Object {
              "latitude": 48.865610000000004,
              "longitude": 2.350499,
              "zoom": 5,
            },
            "maxGuests": 8,
            "previewImage": "https://bit.ly/34LWdhj",
            "price": 207,
            "rating": 1.4018800815887484,
            "title": "La Latina- Small Charming Studio",
            "type": "room",
          },
          Object {
            "bedrooms": 3,
            "city": Object {
              "location": Object {
                "latitude": 52.370216,
                "longitude": 4.895168,
                "zoom": 10,
              },
              "name": "Brussels",
            },
            "description": "In full nature and very close to public transport. Green area surrounded by all kinds of sports facilities including a golf course, paddle, artificial grass soccer, pelota court. In an urbanization of villas with landscaped plots of about 500 m2",
            "goods": Array [
              "elevator",
              "dishwasher",
              "coffee machine",
              "washer",
              "washing machine",
            ],
            "host": Object {
              "avatar": "https://robohash.org/82?set=set2&size=74x74",
              "id": 6,
              "isPro": false,
              "name": "Whitney",
            },
            "id": 2,
            "images": Array [
              "https://bit.ly/30YVQif",
              "https://bit.ly/3lEt2DG",
              "https://bit.ly/36TgIv7",
              "https://bit.ly/33Qpecj",
              "https://bit.ly/36Ys6Wn",
              "https://bit.ly/34LWdhj",
            ],
            "isFavorite": false,
            "isPremium": false,
            "location": Object {
              "latitude": 48.865610000000004,
              "longitude": 2.350499,
              "zoom": 5,
            },
            "maxGuests": 5,
            "previewImage": "https://bit.ly/34LWdhj",
            "price": 194,
            "rating": 1.9069547983791004,
            "title": "Estudio/suite completo en el centro de Segovia",
            "type": "house",
          },
        ]
      }
    />
  </li>
  <li
    className="favorites__locations-items"
  >
    <div
      className="favorites__locations locations locations--current"
    >
      <div
        className="locations__item"
      >
        <LocationsItem
          cityName="Brussels"
          onClick={[Function]}
        />
      </div>
    </div>
    <FavoritesCardsList
      city="Brussels"
      offers={
        Array [
          Object {
            "bedrooms": 1,
            "city": Object {
              "location": Object {
                "latitude": 52.370216,
                "longitude": 4.895168,
                "zoom": 10,
              },
              "name": "Paris",
            },
            "description": "Gran suite con entrada independiente y baño interior privado en el centro de Segovia. Privacidad y comodidad a tan sólo tres minutos del acueducto.Amplia y luminosa, con 2 camas de 105 (+ 1 opcional de 90), baño completo, calefacción, mininevera, microondas, vajilla, cubertería básica, Internet y un balcón grande y soleado.I speak English, Italian and Spanish",
            "goods": Array [
              "cabel TV",
              "heating",
              "kitchen",
              "towels",
              "washing machine",
              "washer",
              "dishwasher",
              "conditioner",
              "elevator",
              "coffee machine",
            ],
            "host": Object {
              "avatar": "https://robohash.org/28?set=set2&size=74x74",
              "id": 4,
              "isPro": false,
              "name": "Salom",
            },
            "id": 1,
            "images": Array [
              "https://bit.ly/34LWdhj",
              "https://bit.ly/36Ys6Wn",
              "https://bit.ly/33Qpecj",
              "https://bit.ly/30YVQif",
              "https://bit.ly/36TgIv7",
              "https://bit.ly/3lEt2DG",
            ],
            "isFavorite": true,
            "isPremium": false,
            "location": Object {
              "latitude": 48.865610000000004,
              "longitude": 2.350499,
              "zoom": 5,
            },
            "maxGuests": 8,
            "previewImage": "https://bit.ly/34LWdhj",
            "price": 207,
            "rating": 1.4018800815887484,
            "title": "La Latina- Small Charming Studio",
            "type": "room",
          },
          Object {
            "bedrooms": 3,
            "city": Object {
              "location": Object {
                "latitude": 52.370216,
                "longitude": 4.895168,
                "zoom": 10,
              },
              "name": "Brussels",
            },
            "description": "In full nature and very close to public transport. Green area surrounded by all kinds of sports facilities including a golf course, paddle, artificial grass soccer, pelota court. In an urbanization of villas with landscaped plots of about 500 m2",
            "goods": Array [
              "elevator",
              "dishwasher",
              "coffee machine",
              "washer",
              "washing machine",
            ],
            "host": Object {
              "avatar": "https://robohash.org/82?set=set2&size=74x74",
              "id": 6,
              "isPro": false,
              "name": "Whitney",
            },
            "id": 2,
            "images": Array [
              "https://bit.ly/30YVQif",
              "https://bit.ly/3lEt2DG",
              "https://bit.ly/36TgIv7",
              "https://bit.ly/33Qpecj",
              "https://bit.ly/36Ys6Wn",
              "https://bit.ly/34LWdhj",
            ],
            "isFavorite": false,
            "isPremium": false,
            "location": Object {
              "latitude": 48.865610000000004,
              "longitude": 2.350499,
              "zoom": 5,
            },
            "maxGuests": 5,
            "previewImage": "https://bit.ly/34LWdhj",
            "price": 194,
            "rating": 1.9069547983791004,
            "title": "Estudio/suite completo en el centro de Segovia",
            "type": "house",
          },
        ]
      }
    />
  </li>
</ul>
`;
